--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,40 @@ pytest_cache/
 
 # === Git ===
 *.orig
+
+
+
+
+
+# === Node / Frontend ===
+node_modules/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# .next/ for Next.js or build/ for Vite/React
+.next/
+dist/
+build/
+out/
+
+# parcel-bundler cache
+.cache/
+
+# Svelte
+.svelte-kit/
+
+# Vue
+.vite/
+
+# === IDE / Editor backups ===
+*.tgz
+*.tmp
+*.bak
+*.swp
+
+# Lock files (optional based on team convention)
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
